// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostActiveServicesWidget should be able to switch to different type 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card card"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey600"
      >
        Widget Title
      </p>
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--intent-primary"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            all
          </p>
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            cd.serviceDashboard.prod
          </p>
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            cd.serviceDashboard.nonProd
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-large"
      >
        <div
          class="typeContainer"
          data-test="mostActiveServicesWidgetType"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
          >
            deploymentsText
          </p>
        </div>
        <div
          class="typeContainer typeSelected"
          data-test="mostActiveServicesWidgetTypeSelected"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-white"
          >
            errors
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main stackTickerContainer StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-flex-start"
        data-test="mostActiveServicesWidgetContent"
        style="width: 100%; height: 150px;"
      >
        <div
          class="Layout--vertical StyledProps--main weightedStackContainer"
          style="width: 60%;"
        >
          <div
            class="StyledProps--font StyledProps--main WeightedStack--main"
          >
            <div>
              <div
                class="WeightedStack--stack WeightedStack--stackColumnReverse stack"
              >
                <p
                  class="StyledProps--font StyledProps--main WeightedStack--stackLabelCommon WeightedStack--stackLabel label"
                >
                  Service2
                   (
                  163
                  )
                </p>
                <div
                  class="progress-bar progressBar"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="width: 100%;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="WeightedStack--stack WeightedStack--stackColumnReverse stack"
              >
                <p
                  class="StyledProps--font StyledProps--main WeightedStack--stackLabelCommon WeightedStack--stackLabel label"
                >
                  Service1
                   (
                  63
                  )
                </p>
                <div
                  class="progress-bar progressBar"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="width: 38.65030674846626%;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MostActiveServicesWidget should render MostActiveServicesWidget 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card card"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey600"
      >
        Widget Title
      </p>
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--intent-primary"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            all
          </p>
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            cd.serviceDashboard.prod
          </p>
          <p
            class="StyledProps--font StyledProps--main environmentType StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            data-test="mostActiveServicesWidgetEnvironmentType"
          >
            cd.serviceDashboard.nonProd
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-large"
      >
        <div
          class="typeContainer typeSelected"
          data-test="mostActiveServicesWidgetTypeSelected"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-white"
          >
            deploymentsText
          </p>
        </div>
        <div
          class="typeContainer"
          data-test="mostActiveServicesWidgetType"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
          >
            errors
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main stackTickerContainer StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-flex-start"
        data-test="mostActiveServicesWidgetContent"
        style="width: 100%; height: 150px;"
      >
        <div
          class="Layout--vertical StyledProps--main weightedStackContainer"
          style="width: 60%;"
        >
          <div
            class="StyledProps--font StyledProps--main WeightedStack--main"
          >
            <div>
              <div
                class="WeightedStack--stack WeightedStack--stackColumnReverse stack"
              >
                <p
                  class="StyledProps--font StyledProps--main WeightedStack--stackLabelCommon WeightedStack--stackLabel label"
                >
                  Service2
                   (
                  137
                  )
                </p>
                <div
                  class="progress-bar progressBar"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="width: 100%;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="WeightedStack--stack WeightedStack--stackColumnReverse stack"
              >
                <p
                  class="StyledProps--font StyledProps--main WeightedStack--stackLabelCommon WeightedStack--stackLabel label"
                >
                  Service1
                   (
                  37
                  )
                </p>
                <div
                  class="progress-bar progressBar"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="width: 27.00729927007299%;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
